fix format_dates test

--- a/examples/prophet_example.ipynb
+++ b/examples/prophet_example.ipynb
@@ -85,48 +85,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions = prophet_data['y']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "\nA value is trying to be set on a copy of a slice from a DataFrame\n\nSee the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
-     ]
-    }
-   ],
-   "source": [
-    "predictions.loc[predictions.isna(), :] = \"nan\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prophet_data.loc[prophet_data['y'].isnull(), 'y'] = \"Nan\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -294,33 +252,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "                    trend    predicted_y  predicted_y_upper  predicted_y_lower\n",
-       "ds                                                                            \n",
-       "1992-01-01  149250.780024  131335.258888      140678.017308      121328.634945\n",
-       "1992-02-01  150289.708735  131131.825070      140340.328179      121754.956916\n",
-       "1992-03-01  151261.609788  164783.266318      173911.480735      155843.590227\n",
-       "1992-04-01  152300.538499  164876.320165      173518.572238      154599.565597\n",
-       "1992-05-01  153305.953381  179316.575111      188019.544254      170643.261765\n",
-       "...                   ...            ...                ...                ...\n",
-       "2016-05-07  448979.625130  474009.909550      483131.017415      464511.403620\n",
-       "2016-05-08  449025.071656  472531.169543      481797.792041      463465.927033\n",
-       "2016-05-09  449070.518182  477923.719431      486737.957972      468015.944403\n",
-       "2016-05-10  449115.964707  481324.802194      490379.476734      471401.637510\n",
-       "2016-05-11  449161.411233  482315.157151      491797.972897      473191.205587\n",
+       "                         trend  predicted_y  predicted_y_upper  \\\n",
+       "ds                                                               \n",
+       "2017-05-01 00:00:00  16.250680    27.807849          33.374356   \n",
+       "2017-05-01 00:05:00  16.253167    27.367737          33.670576   \n",
+       "2017-05-01 00:10:00  16.255653    26.917831          33.019589   \n",
+       "2017-05-01 00:15:00  16.258140    26.458772          32.259374   \n",
+       "2017-05-01 00:20:00  16.260627    25.991244          31.658203   \n",
+       "...                        ...          ...                ...   \n",
+       "2017-07-11 00:00:00  21.681163    32.899402          53.776880   \n",
+       "2017-07-12 00:00:00  21.391026    33.782892          60.724614   \n",
+       "2017-07-13 00:00:00  21.100888    32.670847          65.661196   \n",
+       "2017-07-14 00:00:00  20.810751    32.679636          72.305638   \n",
+       "2017-07-15 00:00:00  20.520613    31.795031          77.818273   \n",
        "\n",
-       "[303 rows x 4 columns]"
+       "                     predicted_y_lower  \n",
+       "ds                                      \n",
+       "2017-05-01 00:00:00          22.300112  \n",
+       "2017-05-01 00:05:00          21.520037  \n",
+       "2017-05-01 00:10:00          21.201439  \n",
+       "2017-05-01 00:15:00          20.745651  \n",
+       "2017-05-01 00:20:00          20.091443  \n",
+       "...                                ...  \n",
+       "2017-07-11 00:00:00          12.833854  \n",
+       "2017-07-12 00:00:00           5.862690  \n",
+       "2017-07-13 00:00:00          -2.490458  \n",
+       "2017-07-14 00:00:00          -6.537340  \n",
+       "2017-07-15 00:00:00         -17.363313  \n",
+       "\n",
+       "[18731 rows x 4 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>trend</th>\n      <th>predicted_y</th>\n      <th>predicted_y_upper</th>\n      <th>predicted_y_lower</th>\n    </tr>\n    <tr>\n      <th>ds</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1992-01-01</th>\n      <td>149250.780024</td>\n      <td>131335.258888</td>\n      <td>140678.017308</td>\n      <td>121328.634945</td>\n    </tr>\n    <tr>\n      <th>1992-02-01</th>\n      <td>150289.708735</td>\n      <td>131131.825070</td>\n      <td>140340.328179</td>\n      <td>121754.956916</td>\n    </tr>\n    <tr>\n      <th>1992-03-01</th>\n      <td>151261.609788</td>\n      <td>164783.266318</td>\n      <td>173911.480735</td>\n      <td>155843.590227</td>\n    </tr>\n    <tr>\n      <th>1992-04-01</th>\n      <td>152300.538499</td>\n      <td>164876.320165</td>\n      <td>173518.572238</td>\n      <td>154599.565597</td>\n    </tr>\n    <tr>\n      <th>1992-05-01</th>\n      <td>153305.953381</td>\n      <td>179316.575111</td>\n      <td>188019.544254</td>\n      <td>170643.261765</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2016-05-07</th>\n      <td>448979.625130</td>\n      <td>474009.909550</td>\n      <td>483131.017415</td>\n      <td>464511.403620</td>\n    </tr>\n    <tr>\n      <th>2016-05-08</th>\n      <td>449025.071656</td>\n      <td>472531.169543</td>\n      <td>481797.792041</td>\n      <td>463465.927033</td>\n    </tr>\n    <tr>\n      <th>2016-05-09</th>\n      <td>449070.518182</td>\n      <td>477923.719431</td>\n      <td>486737.957972</td>\n      <td>468015.944403</td>\n    </tr>\n    <tr>\n      <th>2016-05-10</th>\n      <td>449115.964707</td>\n      <td>481324.802194</td>\n      <td>490379.476734</td>\n      <td>471401.637510</td>\n    </tr>\n    <tr>\n      <th>2016-05-11</th>\n      <td>449161.411233</td>\n      <td>482315.157151</td>\n      <td>491797.972897</td>\n      <td>473191.205587</td>\n    </tr>\n  </tbody>\n</table>\n<p>303 rows × 4 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>trend</th>\n      <th>predicted_y</th>\n      <th>predicted_y_upper</th>\n      <th>predicted_y_lower</th>\n    </tr>\n    <tr>\n      <th>ds</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2017-05-01 00:00:00</th>\n      <td>16.250680</td>\n      <td>27.807849</td>\n      <td>33.374356</td>\n      <td>22.300112</td>\n    </tr>\n    <tr>\n      <th>2017-05-01 00:05:00</th>\n      <td>16.253167</td>\n      <td>27.367737</td>\n      <td>33.670576</td>\n      <td>21.520037</td>\n    </tr>\n    <tr>\n      <th>2017-05-01 00:10:00</th>\n      <td>16.255653</td>\n      <td>26.917831</td>\n      <td>33.019589</td>\n      <td>21.201439</td>\n    </tr>\n    <tr>\n      <th>2017-05-01 00:15:00</th>\n      <td>16.258140</td>\n      <td>26.458772</td>\n      <td>32.259374</td>\n      <td>20.745651</td>\n    </tr>\n    <tr>\n      <th>2017-05-01 00:20:00</th>\n      <td>16.260627</td>\n      <td>25.991244</td>\n      <td>31.658203</td>\n      <td>20.091443</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2017-07-11 00:00:00</th>\n      <td>21.681163</td>\n      <td>32.899402</td>\n      <td>53.776880</td>\n      <td>12.833854</td>\n    </tr>\n    <tr>\n      <th>2017-07-12 00:00:00</th>\n      <td>21.391026</td>\n      <td>33.782892</td>\n      <td>60.724614</td>\n      <td>5.862690</td>\n    </tr>\n    <tr>\n      <th>2017-07-13 00:00:00</th>\n      <td>21.100888</td>\n      <td>32.670847</td>\n      <td>65.661196</td>\n      <td>-2.490458</td>\n    </tr>\n    <tr>\n      <th>2017-07-14 00:00:00</th>\n      <td>20.810751</td>\n      <td>32.679636</td>\n      <td>72.305638</td>\n      <td>-6.537340</td>\n    </tr>\n    <tr>\n      <th>2017-07-15 00:00:00</th>\n      <td>20.520613</td>\n      <td>31.795031</td>\n      <td>77.818273</td>\n      <td>-17.363313</td>\n    </tr>\n  </tbody>\n</table>\n<p>18731 rows × 4 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 27
     }
    ],
    "source": [
