fix lag_features to work correctly when you don't have a hierarchy

--- a/examples/prophet_example.ipynb
+++ b/examples/prophet_example.ipynb
@@ -76,19 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prophet_data = pd.read_csv(\"https://raw.githubusercontent.com/facebook/prophet/master/examples/example_yosemite_temps.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "prophet_data = pd.read_csv(\"https://raw.githubusercontent.com/facebook/prophet/master/examples/example_yosemite_temps.csv\")\n",
     "fframe = ff.ForecastFrame(data=prophet_data, target=\"y\", datetime_column=\"ds\")"
    ]
   },
@@ -513,66 +505,112 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "           ds       y    predicted_y\n",
-       "0  1998-03-01  230313  225889.467947\n",
-       "1  1998-04-01  234503  234661.483315\n",
-       "2  1998-05-01  245027  235414.358755\n",
-       "3  1998-06-01  244067  239774.172447\n",
-       "4  1998-07-01  241431  248628.421302\n",
-       "..        ...     ...            ...\n",
-       "68 2003-11-01  301265  305004.513365\n",
-       "69 2003-12-01  357577  302976.983224\n",
-       "70 2004-01-01  281460  303511.437231\n",
-       "71 2004-02-01  282444  294805.307417\n",
-       "72 2004-03-01  319077  297829.240455\n",
-       "\n",
-       "[73 rows x 3 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>ds</th>\n      <th>y</th>\n      <th>predicted_y</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1998-03-01</td>\n      <td>230313</td>\n      <td>225889.467947</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1998-04-01</td>\n      <td>234503</td>\n      <td>234661.483315</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1998-05-01</td>\n      <td>245027</td>\n      <td>235414.358755</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1998-06-01</td>\n      <td>244067</td>\n      <td>239774.172447</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1998-07-01</td>\n      <td>241431</td>\n      <td>248628.421302</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>68</th>\n      <td>2003-11-01</td>\n      <td>301265</td>\n      <td>305004.513365</td>\n    </tr>\n    <tr>\n      <th>69</th>\n      <td>2003-12-01</td>\n      <td>357577</td>\n      <td>302976.983224</td>\n    </tr>\n    <tr>\n      <th>70</th>\n      <td>2004-01-01</td>\n      <td>281460</td>\n      <td>303511.437231</td>\n    </tr>\n    <tr>\n      <th>71</th>\n      <td>2004-02-01</td>\n      <td>282444</td>\n      <td>294805.307417</td>\n    </tr>\n    <tr>\n      <th>72</th>\n      <td>2004-03-01</td>\n      <td>319077</td>\n      <td>297829.240455</td>\n    </tr>\n  </tbody>\n</table>\n<p>73 rows × 3 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 27
-    }
-   ],
    "source": [
-    "fframe.cross_validations[0][\"test\"]"
-   ]
+    "## Example with Feature Engineering"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fframe.date_format"
+    "prophet_data = pd.read_csv(\"https://raw.githubusercontent.com/facebook/prophet/master/examples/example_retail_sales.csv\")\n",
+    "fframe = ff.ForecastFrame(data=prophet_data, target=\"y\", datetime_column=\"ds\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fframe.log_features(features='y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fframe.lag_features(features='y', lags=[1, 2, 3, 7, 52])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "You have to supply one of 'by' and 'level'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-86-7b5482fd8646>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalc_datetime_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlag_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'y'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlags\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m52\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mfframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalc_statistical_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwindows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/forecastframe/forecastframe/feature_engineering.py\u001b[0m in \u001b[0;36mlag_features\u001b[0;34m(self, features, lags, attribute)\u001b[0m\n\u001b[1;32m    203\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    204\u001b[0m         lag_columns = (\n\u001b[0;32m--> 205\u001b[0;31m             \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhierarchy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    206\u001b[0m             \u001b[0;34m.\u001b[0m\u001b[0mshift\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlag\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfreq\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"D\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    207\u001b[0m             \u001b[0;34m.\u001b[0m\u001b[0mrename\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumn_names\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mgroupby\u001b[0;34m(self, by, axis, level, as_index, sort, group_keys, squeeze, observed, dropna)\u001b[0m\n\u001b[1;32m   6712\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6713\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlevel\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mby\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6714\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"You have to supply one of 'by' and 'level'\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   6715\u001b[0m         \u001b[0maxis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_axis_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6716\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: You have to supply one of 'by' and 'level'"
+     ]
+    }
+   ],
+   "source": [
+    "fframe.calc_datetime_features()\n",
+    "fframe.lag_features(features='y', lags=[1, 2, 3, 7, 52])\n",
+    "fframe.calc_statistical_features(features=y, windows=30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'\\n        <b>In-Sample Metrics</b>:\\n        <br />• Median: 3.45%\\n        <br />• Weighted Average: 5.25%\\n        <br />• Difference: 1.79% (right-tailed skew)\\n        <br /><br />\\n\\n        <b>Out-of-Sample Metrics</b>:\\n                <br />• Median: 11.47%\\n                <br />• Weighted Average: 12.19%\\n                <br />• Difference: 0.72% (right-tailed skew)\\n                <br /><br />\\n        '"
-      ]
+       "                    y  day  day_of_week  weekend_flag  week  month  year  \\\n",
+       "ds                                                                         \n",
+       "1992-01-01  11.893941    1            2         False     1      1    92   \n",
+       "1992-02-01  11.898732    1            5          True     5      2    92   \n",
+       "1992-03-01  11.978777    1            6          True    10      3    92   \n",
+       "1992-04-01  12.005607    1            2         False    14      4    92   \n",
+       "1992-05-01  12.043960    1            4         False    18      5    92   \n",
+       "...               ...  ...          ...           ...   ...    ...   ...   \n",
+       "2016-01-01  12.901540    1            4         False     1      1    16   \n",
+       "2016-02-01  12.932546    1            0         False     6      2    16   \n",
+       "2016-03-01  13.039186    1            1         False    10      3    16   \n",
+       "2016-04-01  13.019081    1            4         False    14      4    16   \n",
+       "2016-05-01  13.063509    1            6          True    19      5    16   \n",
+       "\n",
+       "            quarter month_year quarter_year  \n",
+       "ds                                           \n",
+       "1992-01-01        1      92M01         92Q1  \n",
+       "1992-02-01        1      92M02         92Q1  \n",
+       "1992-03-01        1      92M03         92Q1  \n",
+       "1992-04-01        2      92M04         92Q2  \n",
+       "1992-05-01        2      92M05         92Q2  \n",
+       "...             ...        ...          ...  \n",
+       "2016-01-01        1      16M01         16Q1  \n",
+       "2016-02-01        1      16M02         16Q1  \n",
+       "2016-03-01        1      16M03         16Q1  \n",
+       "2016-04-01        2      16M04         16Q2  \n",
+       "2016-05-01        2      16M05         16Q2  \n",
+       "\n",
+       "[293 rows x 10 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>y</th>\n      <th>day</th>\n      <th>day_of_week</th>\n      <th>weekend_flag</th>\n      <th>week</th>\n      <th>month</th>\n      <th>year</th>\n      <th>quarter</th>\n      <th>month_year</th>\n      <th>quarter_year</th>\n    </tr>\n    <tr>\n      <th>ds</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1992-01-01</th>\n      <td>11.893941</td>\n      <td>1</td>\n      <td>2</td>\n      <td>False</td>\n      <td>1</td>\n      <td>1</td>\n      <td>92</td>\n      <td>1</td>\n      <td>92M01</td>\n      <td>92Q1</td>\n    </tr>\n    <tr>\n      <th>1992-02-01</th>\n      <td>11.898732</td>\n      <td>1</td>\n      <td>5</td>\n      <td>True</td>\n      <td>5</td>\n      <td>2</td>\n      <td>92</td>\n      <td>1</td>\n      <td>92M02</td>\n      <td>92Q1</td>\n    </tr>\n    <tr>\n      <th>1992-03-01</th>\n      <td>11.978777</td>\n      <td>1</td>\n      <td>6</td>\n      <td>True</td>\n      <td>10</td>\n      <td>3</td>\n      <td>92</td>\n      <td>1</td>\n      <td>92M03</td>\n      <td>92Q1</td>\n    </tr>\n    <tr>\n      <th>1992-04-01</th>\n      <td>12.005607</td>\n      <td>1</td>\n      <td>2</td>\n      <td>False</td>\n      <td>14</td>\n      <td>4</td>\n      <td>92</td>\n      <td>2</td>\n      <td>92M04</td>\n      <td>92Q2</td>\n    </tr>\n    <tr>\n      <th>1992-05-01</th>\n      <td>12.043960</td>\n      <td>1</td>\n      <td>4</td>\n      <td>False</td>\n      <td>18</td>\n      <td>5</td>\n      <td>92</td>\n      <td>2</td>\n      <td>92M05</td>\n      <td>92Q2</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2016-01-01</th>\n      <td>12.901540</td>\n      <td>1</td>\n      <td>4</td>\n      <td>False</td>\n      <td>1</td>\n      <td>1</td>\n      <td>16</td>\n      <td>1</td>\n      <td>16M01</td>\n      <td>16Q1</td>\n    </tr>\n    <tr>\n      <th>2016-02-01</th>\n      <td>12.932546</td>\n      <td>1</td>\n      <td>0</td>\n      <td>False</td>\n      <td>6</td>\n      <td>2</td>\n      <td>16</td>\n      <td>1</td>\n      <td>16M02</td>\n      <td>16Q1</td>\n    </tr>\n    <tr>\n      <th>2016-03-01</th>\n      <td>13.039186</td>\n      <td>1</td>\n      <td>1</td>\n      <td>False</td>\n      <td>10</td>\n      <td>3</td>\n      <td>16</td>\n      <td>1</td>\n      <td>16M03</td>\n      <td>16Q1</td>\n    </tr>\n    <tr>\n      <th>2016-04-01</th>\n      <td>13.019081</td>\n      <td>1</td>\n      <td>4</td>\n      <td>False</td>\n      <td>14</td>\n      <td>4</td>\n      <td>16</td>\n      <td>2</td>\n      <td>16M04</td>\n      <td>16Q2</td>\n    </tr>\n    <tr>\n      <th>2016-05-01</th>\n      <td>13.063509</td>\n      <td>1</td>\n      <td>6</td>\n      <td>True</td>\n      <td>19</td>\n      <td>5</td>\n      <td>16</td>\n      <td>2</td>\n      <td>16M05</td>\n      <td>16Q2</td>\n    </tr>\n  </tbody>\n</table>\n<p>293 rows × 10 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 84
     }
    ],
    "source": [
-    "fframe.summarize_cv()['key_stats']"
+    "fframe.sample"
    ]
   },
   {
